--- a/scootsProject/reservations.html
+++ b/scootsProject/reservations.html
@@ -38,10 +38,10 @@
                 <label class="top">Full Name*<input type="text" name="fullName" required pattern="[a-zA-Z\p{L} \.\-]{5,}"></label>
                 <label class="top">Phone*<input type="tel" name="phone" required pattern="[\W\d]{7,}"></label>
                 <label class="top">Email<input type="email" name="email" placeholder="someone@gmail.com" ></label>
-                <label class="top">Address<input list="address-type-list" name="addressType"></label>
-                <label class="top">State<input list="state-type-list" name="stateType"></label>
+                <label class="top">Address<input type="text" name="addressType"></label>
+                <label class="top">State<input type="text" name="stateType"></label>
                 <label class="top">Zip Code<input type="number" name="zipCode" ></label>
-                <label class="top">Country<input list="country-type-list" name="countryType"></label>
+                <label class="top">Country<input type="text" name="countryType"></label>
             </fieldset>
             <fieldset class="field">
                 <legend>Reservation Information</legend>
