--- a/scootsProject/contact.html
+++ b/scootsProject/contact.html
@@ -42,14 +42,14 @@
                 <p>Address: 1000 fake street</p>
                 <p>Number: (555) 555-5555</p> 
                 <p>Email: totallyrealemail@fakeEmail.com</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5439.605743150258!2d-86.95197601316056!3d20.511020994202845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e59cf3a0ece15%3A0x9216e3c2b55e5526!2sPlaya%20del%20Carmen-Cozumel%20Ferry%20Dock!5e0!3m2!1sen!2sus!4v1607716895232!5m2!1sen!2sus" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>    
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5439.605743150258!2d-86.95197601316056!3d20.511020994202845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e59cf3a0ece15%3A0x9216e3c2b55e5526!2sPlaya%20del%20Carmen-Cozumel%20Ferry%20Dock!5e0!3m2!1sen!2sus!4v1607716895232!5m2!1sen!2sus" width="300" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>    
             </div>
             <div class="info">
                 <h3>Near Terminal Puerta Maya</h3>
                 <p>Address: 1000 fake street</p>
                 <p>Number: (555) 555-5555</p> 
                 <p>Email: totallyrealemail@fakeEmail.com</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.741153531653!2d-86.97600822452654!3d20.47582199555849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e5748bac98d29%3A0xec697a2a774f7a00!2sPuerta%20Maya%20Cruise%20Ship%20Terminal!5e0!3m2!1sen!2sus!4v1607716980414!5m2!1sen!2sus" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.741153531653!2d-86.97600822452654!3d20.47582199555849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e5748bac98d29%3A0xec697a2a774f7a00!2sPuerta%20Maya%20Cruise%20Ship%20Terminal!5e0!3m2!1sen!2sus!4v1607716980414!5m2!1sen!2sus" width="300" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </div>
         <form action="confirm.html" method="get">
