--- a/scootsProject/index.html
+++ b/scootsProject/index.html
@@ -37,7 +37,7 @@
             <a class="homeReservationButton" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/reservations.html">MAKE A RESERVATION NOW!!</a>
         </div>
         <div class="homeRental">
-            <h2>Type of Rentals</h2>
+            <h2>We have many diffent types of rentals!</h2>
             <h3>Honda Motor Scooters</h3>
             <ul>
                 <li>Honda Metropolitan (49cc) - 1 person</li>
