--- a/scootsProject/index.html
+++ b/scootsProject/index.html
@@ -33,7 +33,7 @@
     </header>
     <main id="home">
         <div class="callOfAction">
-            <h1>Make your next adventure one you will never forget.</h1>
+            <h1>Make Scoots your next adventure one you will never forget.</h1>
             <a class="homeReservationButton" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/reservations.html">MAKE A RESERVATION NOW!!</a>
         </div>
         <div class="homeRental">
