--- a/scootsProject/index.html
+++ b/scootsProject/index.html
@@ -61,7 +61,7 @@
                     <img src="assets/cozumelHero300-225.jpg" alt="hero image">
                 </picture>
                 <section class= "weatherSum">
-                    <h3>Weather Summary</h3>
+                    <h3>Todays Weather</h3>
                     <table class="weatherTable">
                         <tbody>
                             <tr>
