--- a/scootsProject/index.html
+++ b/scootsProject/index.html
@@ -37,7 +37,8 @@
             <a class="homeReservationButton" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/reservations.html">MAKE A RESERVATION NOW!!</a>
         </div>
         <div class="homeRental">
-            <h2>We have many diffent types of rentals!</h2>
+            <a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/rentals.html">
+                <h2>We have many diffent types of rentals!</h2>
             <h3>Honda Motor Scooters</h3>
             <ul>
                 <li>Honda Metropolitan (49cc) - 1 person</li>
@@ -53,6 +54,7 @@
                 <li>4-door Jeep Wrangler - manual with A/C - 5 people max</li>
                 <li>2-door Jeep Wrangler - open air - manual - 4 people max</li>
             </ul>
+            </a>
         </div>
         <div class="weather">
             <div class="heroWeather">
