--- a/scootsProject/tours.html
+++ b/scootsProject/tours.html
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="feetBarBottom">
-            <p>&copy;2020 | Samuel Witt | Idaho |<a href="https://www.byui.edu/online" target="_blank"> BYUI Online Learning</a><br>Last Date Updated: <span id="currentdate"></span></p>
+            <p>&copy;2020 | Samuel Witt | Idaho |<a href="https://www.byui.edu/online" target="_blank"> BYUI Online Learning</a> | <a href="https://openweathermap.org/"> Weather information from Open Weather</a><br>Last Date Updated: <span id="currentdate"></span></p>
         </div>
     </footer>
     <script src="js/date.js"></script>
