--- a/scootsProject/index.html
+++ b/scootsProject/index.html
@@ -42,17 +42,17 @@
             <h3>Honda Motor Scooters</h3>
             <ul>
                 <li>Honda Metropolitan (49cc) - 1 person</li>
-                <li>Honda Dio (110cc) - 2 person</li>
-                <li>Honda PCX150 (149cc) - 2 person</li>
+                <li>Honda Dio (110cc) - 2 people max</li>
+                <li>Honda PCX150 (149cc) - 2 people max</li>
             </ul>
             <h3>ATV Side-by-Side</h3>
             <ul>
-                <li>Honda Pioneer 1000</li>
+                <li>Honda Pioneer 1000 - 4 people max</li>
             </ul>
             <h3>Jeep Rentals</h3>
             <ul>
-                <li>4-door Jeep Wrangler - manual with A/C - 5 people max</li>
-                <li>2-door Jeep Wrangler - open air - manual - 4 people max</li>
+                <li>4-door Jeep Wrangler - manual - A/C - 5 people max</li>
+                <li>2-door Jeep Wrangler - manual - open air - 4 people max</li>
             </ul>
             </a>
         </div>
@@ -63,7 +63,7 @@
                     <img src="assets/cozumelHero300-225.jpg" alt="hero image">
                 </picture>
                 <section class= "weatherSum">
-                    <h3>Todays Weather</h3>
+                    <h3>Today's Weather</h3>
                     <table class="weatherTable">
                         <tbody>
                             <tr>
