--- a/scootsProject/contact.html
+++ b/scootsProject/contact.html
@@ -55,9 +55,9 @@
         <form action="confirm.html" method="get">
             <fieldset class="field contactField">
                 <legend>Anymore Questions? Message Us!</legend>
-                <label class="top">Full Name*<input type="text" name="fullName" required pattern="[a-zA-Z\p{L} \.\-]{5,}"></label>
+                <label class="top">Full Name<input type="text" name="fullName" required pattern="[a-zA-Z\p{L} \.\-]{5,}"></label>
                 <label class="top">Email<input type="email" name="email" placeholder="someone@gmail.com" required></label>
-                <label class="top"><textarea name="comments" rows="7" cols="35" placeholder="Additional Information or Comments" required></textarea></label>
+                <label class="top"><textarea name="comments" rows="7" cols="35" placeholder="Additional Information or Comments"></textarea></label>
             </fieldset>
             <input type="submit" value="We will contact you soon!" class="submitBtn" onclick="confirm()">
         </form>
