--- a/scootsProject/rentals.html
+++ b/scootsProject/rentals.html
@@ -37,7 +37,7 @@
             <table class="rentalTable rentalTable1">
                 <thead>
                     <tr>
-                        <th colspan="2">Max Persons and Price(includes Tax)</th>
+                        <th colspan="2">Max Persons and Price (includes Tax)</th>
                     </tr>
                     <tr>
                         <th>Rental Type</th>
@@ -95,7 +95,7 @@
                 <li>Unlimited mileage.</li>
                 <li>Liability insurance is free of charge.</li>
                 <li>Reservations rate requires 24 hour prior notification.</li>
-                <li>Free delivery to Cozumel hotel, Airbnb, or private residence for 2+ day rentals.</li>
+                <li>Free delivery to Cozumel Hotel, Airbnb, or private residence for 2+ day rentals.</li>
                 <li>Payment via Google Pay, cash, credit card, debit card, or PayPal.</li>
                 <li>Rentals may be returned to either location.</li>
             </ul>
