--- a/scootsProject/reservations.html
+++ b/scootsProject/reservations.html
@@ -35,8 +35,8 @@
         <form action="confirm.html" method="get">
             <fieldset class="field">
                 <legend>Contact Information</legend>
-                <label class="top">Full Name*<input type="text" name="fullName" required pattern="[a-zA-Z\p{L} \.\-]{5,}"></label>
-                <label class="top">Phone*<input type="tel" name="phone" required pattern="[\W\d]{7,}"></label>
+                <label class="top">Full Name<input type="text" name="fullName" required pattern="[a-zA-Z\p{L} \.\-]{5,}"></label>
+                <label class="top">Phone<input type="tel" name="phone" required pattern="[\W\d]{7,}"></label>
                 <label class="top">Email<input type="email" name="email" placeholder="someone@gmail.com" ></label>
                 <label class="top">Address<input type="text" name="addressType"></label>
                 <label class="top">State<input type="text" name="stateType"></label>
@@ -68,7 +68,7 @@
                     <option value="4"> 
                 </datalist>
                 <label class="top">Cruise Line<input type="text" name="cruiseLine"></label>
-                <label class="top">Additional Information or Comments<textarea name="comments" rows="7" cols="35"></textarea></label>
+                <label class="top"><textarea name="comments" rows="7" cols="35" placeholder="Additional Information or Comments"></textarea></label>
             </fieldset>
             <input type="submit" value="Your Trip Is Planned!" class="submitBtn" onclick="confirm()">
         </form> 
