--- a/scootsProject/rentals.html
+++ b/scootsProject/rentals.html
@@ -37,7 +37,7 @@
             <table class="rentalTable rentalTable1">
                 <thead>
                     <tr>
-                        <th colspan="2">Max Persons and Price (includes Tax)</th>
+                        <th colspan="2">Max Persons and Price (Includes Tax)</th>
                     </tr>
                     <tr>
                         <th>Rental Type</th>
