--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li>Week 04: <a href="https://valiantwolf.github.io/lesson4/preston-4.html">Preston Town Page</a></li>
       <li>Week 05: <a href="https://valiantwolf.github.io/lesson5/index.html">Preston Town Page Continued</a></li>
       <li>Week 06: <a href="https://valiantwolf.github.io/lesson6/index.html">Responsive Images and Font</a></li>
-      <li>Week 07: <a href="https://valiantwolf.github.io/lesson7/lazyload.html">Lazy Load</a> | <a href="https://valiantwolf.github.io/esson7/gallery-7.html">Gallery Page</a> | <a href="https://valiantwolf.github.io/presentation/index.html">Presentation</a></li>
+      <li>Week 07: <a href="https://valiantwolf.github.io/lesson7/lazyload.html">Lazy Load</a> | <a href="https://valiantwolf.github.io/lesson7/gallery-7.html">Gallery Page</a> | <a href="https://valiantwolf.github.io/presentation/index.html">Presentation</a></li>
       <li>Week 08: <a href="https://valiantwolf.github.io/lesson8/tablebuild.html">Table Build</a> | <a href="https://valiantwolf.github.io/lesson8/stormcenter.html">Storm Center</a></li>
       <li>Week 09: <a href="https://valiantwolf.github.io/lesson9/prophets.html">Prophets</a> | <a href="https://valiantwolf.github.io/lesson9/home-wireframes.html">Home Wireframes</a> | <a href="https://valiantwolf.github.io/lesson9/index.html">Home Page</a></li>
       <li>Week 10: <a href="https://valiantwolf.github.io/lesson10/preston-10.html">Preston Weather API</a></li>
