--- a/lesson11/stormCenter.html
+++ b/lesson11/stormCenter.html
@@ -20,7 +20,7 @@
         <p>Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.</p>
     </div>
     <header>
-        <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html"><img src="assets/weatherBoi.png" alt="Logo" class="logo"></a>
+        <a href="https://lesson11/index.html"><img src="assets/weatherBoi.png" alt="Logo" class="logo"></a>
         <div>
             <h1>Weather Boi</h1>
             <p>Never be surprised again.</p>
@@ -29,12 +29,12 @@
     <nav>
         <ul class= "navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html">Home</a></li>
-            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/preston.html">Preston</a></li>
-            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/sodaSprings.html">Soda Springs</a></li>
-            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/fishHaven.html">Fish Haven</a></li>
-            <li class= "active"><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/stormCenter.html">Storm Center</a></li>
-            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/gallery.html">Gallery</a></li>
+            <li><a href="https://lesson11/index.html">Home</a></li>
+            <li><a href="https://lesson11/preston.html">Preston</a></li>
+            <li><a href="https://lesson11/sodaSprings.html">Soda Springs</a></li>
+            <li><a href="https://lesson11/fishHaven.html">Fish Haven</a></li>
+            <li class= "active"><a href="https://lesson11/stormCenter.html">Storm Center</a></li>
+            <li><a href="https://lesson11/gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
