--- a/scootsProject/reservations.html
+++ b/scootsProject/reservations.html
@@ -19,17 +19,17 @@
 <div id="container">
 <div id="main">
     <header>
-        <a href="https://scootsProject/index.html"><img src="assets/logo.png" alt="Scoots Logo" class="logo"></a>
+        <a href="https://valiantwolf.github.io/scootsProject/index.html"><img src="assets/logo.png" alt="Scoots Logo" class="logo"></a>
         <nav>
             <ul class= "navBar">
                 <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-                <li><a href="https://scootsProject/index.html">Home</a></li>
-                <li><a href="https://scootsProject/rentals.html">Rentals</a></li>
-                <li><a class="active" href="https://scootsProject/reservations.html">Reservations</a></li>
-                <li><a href="https://scootsProject/tours.html">Tours</a></li>
+                <li><a href="https://valiantwolf.github.io/scootsProject/index.html">Home</a></li>
+                <li><a href="https://valiantwolf.github.io/scootsProject/rentals.html">Rentals</a></li>
+                <li><a class="active" href="https://valiantwolf.github.io/scootsProject/reservations.html">Reservations</a></li>
+                <li><a href="https://valiantwolf.github.io/scootsProject/tours.html">Tours</a></li>
             </ul>
         </nav>
-        <a class="contact" href="https://scootsProject/contact.html">Contact Us!</a>
+        <a class="contact" href="https://valiantwolf.github.io/scootsProject/contact.html">Contact Us!</a>
     </header>
     <main>
         <form action="confirm.html" method="get">
@@ -86,19 +86,19 @@
             </div>
             <div class="feetBarNav">
                 <ul>
-                    <li><a href="https://scootsProject/index.html">Home</a></li>
-                    <li><a href="https://scootsProject/rentals.html">Rentals</a></li>
-                    <li><a href="https://scootsProject/reservations.html">Reservations</a></li>
-                    <li><a href="https://scootsProject/tours.html">Tours</a></li>
-                    <li><a href="https://scootsProject/pupper.html">Pupper</a></li>
+                    <li><a href="https://valiantwolf.github.io/scootsProject/index.html">Home</a></li>
+                    <li><a href="https://valiantwolf.github.io/scootsProject/rentals.html">Rentals</a></li>
+                    <li><a href="https://valiantwolf.github.io/scootsProject/reservations.html">Reservations</a></li>
+                    <li><a href="https://valiantwolf.github.io/scootsProject/tours.html">Tours</a></li>
+                    <li><a href="https://valiantwolf.github.io/scootsProject/pupper.html">Pupper</a></li>
                 </ul>
             </div>
             <div class="feetBarContact">
                 <ul>
                     <li><b>Contact Information</b></li>
-                    <li><a href="https://scootsProject/contact.html">Address: 1000 fake street</a></li>
-                    <li><a href="https://scootsProject/contact.html">Phone number: (555) 555-5555</a></li>
-                    <li><a href="https://scootsProject/contact.html">Email: totallyrealemail@fakeEmail.com</a></li>
+                    <li><a href="https://valiantwolf.github.io/scootsProject/contact.html">Address: 1000 fake street</a></li>
+                    <li><a href="https://valiantwolf.github.io/scootsProject/contact.html">Phone number: (555) 555-5555</a></li>
+                    <li><a href="https://valiantwolf.github.io/scootsProject/contact.html">Email: totallyrealemail@fakeEmail.com</a></li>
                 </ul>
             </div>
         </div>
