--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
 <body id="fourOFourBody">
     <main id="fourOFourMain">
         <h1>404 Page Not Found</h1>
-        <h3><a href="https://scootsProject/index.html">Click link here to go back to home.</a></h3>
+        <h3><a href="https://valiantwolf.github.io/scootsProject/index.html">Click link here to go back to home.</a></h3>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script> WebFont.load({google: {families: ['Fenix']}});</script>
