--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -31,11 +31,11 @@
         <ul class= "navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
             <li><a href="#">Home</a></li>
-            <li><a href="https://lesson6/index.html">Preston</a></li>
+            <li><a href="https://valiantwolf.github.io/lesson6/index.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
-            <li class= "active"><a href="https://lesson7/gallery-7.html">Gallery</a></li>
+            <li class= "active"><a href="https://valiantwolf.github.io/lesson7/gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
