--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -30,16 +30,16 @@
         <ul class= "navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
             <li><a href="#">Home</a></li>
-            <li><a href="https://lesson6/index.html">Preston</a></li>
+            <li><a href="https://valiantwolf.github.io/lesson6/index.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="https://lesson8/stormcenter.html">Storm Center</a></li>
-            <li><a href="https://lesson7/gallery-7.html">Gallery</a></li>
+            <li><a href="https://valiantwolf.github.io/lesson8/stormcenter.html">Storm Center</a></li>
+            <li><a href="https://valiantwolf.github.io/lesson7/gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
         <h2>Thank you for your submission!</h2>
-        <a href="https://lesson8/stormcenter.html">&lt;&lt; Back to Storm Center</a>
+        <a href="https://valiantwolf.github.io/lesson8/stormcenter.html">&lt;&lt; Back to Storm Center</a>
     </main>
         
     <footer>
